Expand the API + fix arena permalocks